# pyrunjvm

./: README.md  pyproject.toml
pyrunjvm/: __init__.py  application.py  cli.py  context.py  env.py  pyrunjvm.py  util.py
pyrunjvm/config/tomcat/: server.xml
tests/: test_pyrunjvm.py
