[tool.poetry]
name = "pyrunjvm"
version = "0.5.1"
description = ""
authors = ["riag <riag@163.com>"]
license = "Apache-2.0"

readme= 'README.md'

[tool.poetry.scripts]
pyrunjvm = 'pyrunjvm:cli.main'

[tool.poetry.dependencies]
python = "^3.8"
tomlkit = "^0.5.3"
#multitail = "^1.3"

python-dotenv = "^0.15.0"
click = "^7.1.2"
Jinja2 = "^2.11.3"
[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
